Properly restore the original box-shadow, rather than blowing it away

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -15201,6 +15201,7 @@ function drawAttentionToButton(elem) {
 
   var backgroundColor, backgroundColorRGB, shadowColor;
   var $elem = $(elem);
+  var originalBoxShadow = $elem.css('box-shadow');
 
   // The box shadow will be same colour as the button background, with reduced
   // opacity.
@@ -15226,11 +15227,18 @@ function drawAttentionToButton(elem) {
     shadowColor = backgroundColor;
   }
 
+  var animationTimeSecs = 5;
+
   $elem.css('transition', '');
   $elem.css('box-shadow', '0 0 30px 20px ' + shadowColor);
   nextTick(function() {
-    $elem.css('transition', 'box-shadow 5s');
+    $elem.css('transition', 'box-shadow ' + animationTimeSecs + 's');
     $elem.css('box-shadow', 'none');
+
+    setTimeout(function() {
+      $elem.css('transition', '');
+      $elem.css('box-shadow', originalBoxShadow);
+    }, animationTimeSecs * 1000);
   });
 }
 
