--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -836,6 +836,14 @@
             </span>
             <a class="NewVersionEmail" href="#"></a>
           </p>
+
+          <hr>
+          <p class="client-version text-center muted">
+            <span data-i18n="about#client-version">
+              Psiphon for Windows client version:
+            </span>
+            <span class="ClientVersion"></span>
+          </p>
         </div><!-- /about-pane -->
 
 
