--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -366,7 +366,7 @@
                         helpful if you often run Psiphon for long periods of
                         time.
                       </p>
-                      <div class="controls checkbox checkbox-primary">
+                      <div class="controls checkbox">
                         <input type="checkbox" id="SystrayMinimize"/>
                         <label for="SystrayMinimize">
                           <span data-i18n="settings#systray-minimize#enable-label">
@@ -408,7 +408,7 @@
                         so enabling this option will give you faster access to those sites
                         and can sometimes reduce ISP data usage costs.
                       </p>
-                      <div class="controls checkbox checkbox-primary">
+                      <div class="controls checkbox">
                         <input type="checkbox" id="SplitTunnel"/>
                         <label for="SplitTunnel">
                           <span data-i18n="settings#split-tunnel#enable-label">
@@ -651,7 +651,7 @@
                         </div>
                       </div>
                       <div class="control-group">
-                        <div class="controls checkbox checkbox-primary">
+                        <div class="controls checkbox">
                           <input type="checkbox" id="SkipUpstreamProxy"/>
                           <label for="SkipUpstreamProxy">
                             <span data-i18n="settings#upstream-proxy#skip-label">
@@ -686,7 +686,7 @@
                 <div class="accordion-inner">
                   <form>
                     <fieldset>
-                      <div class="controls checkbox checkbox-primary">
+                      <div class="controls checkbox checkbox-warning">
                         <input type="checkbox" id="VPN"/>
                         <label for="VPN">
                           <span data-i18n="settings#transport-mode#check-label">
@@ -781,7 +781,7 @@
               </div>
 
               <div>
-                <div class="controls checkbox checkbox-primary">
+                <div class="controls checkbox">
                   <input type="checkbox" checked="true" id="feedback-send-diagnostic">
                   <label for="feedback-send-diagnostic">
                     <span data-i18n="[html]feedback#diagnostic_check">
@@ -813,7 +813,7 @@
         <!-- LOGS ==========================================================-->
         <div class="tab-pane fade" id="logs-pane">
           <div>
-            <div class="controls checkbox checkbox-primary invisible">
+            <div class="controls checkbox invisible">
               <input type="checkbox" id="show-debug-logs"/>
               <label for="show-debug-logs">
                 <span data-i18n="logs#show-debug-label">
