Fix bad state text size for Chinese (and other short languages). Replace Slabtext with Textfill.

--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -23,7 +23,6 @@
   <link href="vendor/jqueryui/jquery-ui.structure.min.css?__inline=true" rel="stylesheet">
   <link href="vendor/icomoon/style.css?__inline=true" rel="stylesheet">
   <link href="vendor/icomoon/helpers.css?__inline=true" rel="stylesheet">
-  <link href="vendor/slabtext/slabtext.css?__inline=true" rel="stylesheet">
   <link href="vendor/flags32.css?__inline=true" rel="stylesheet">
   <link href="css/main.css?__inline=true" rel="stylesheet">
 
@@ -59,7 +58,7 @@
   <script src="vendor/jqueryui/jquery-ui.min.js?__inline=true"></script>
   <script src="vendor/jquery.loadTemplate-1.4.5.min.js?__inline=true"></script>
   <script src="vendor/spin.js?__inline=true"></script>
-  <script src="vendor/slabtext/slabtext.js?__inline=true"></script>
+  <script src="vendor/jquery.textfill.js?__inline=true"></script>
   <script src="vendor/i18next.min.js?__inline=true"></script>
 
   <!--[if lt IE 8]>
@@ -209,8 +208,8 @@
                 <i class="icon-spinner6 icon-spin icon-state-symbol"></i>
               </div>
               <div>
-                <h2 class="slabtext-container">
-                  <span class="slabtext" data-i18n="[html]connection#starting-msg">
+                <h2 class="textfill-container">
+                  <span data-i18n="[html]connection#starting-msg">
                     Psiphon is <span class="state-word">connecting</span>…
                   </span>
                 </h2>
@@ -231,8 +230,8 @@
                 <i class="icon-checkmark-circle icon-state-symbol"></i>
               </div>
               <div>
-                <h2 class="slabtext-container">
-                  <span class="slabtext" data-i18n="[html]connection#connected-msg">
+                <h2 class="textfill-container">
+                  <span data-i18n="[html]connection#connected-msg">
                     Psiphon is <span class="state-word">connected</span>
                   </span>
                 </h2>
@@ -253,8 +252,8 @@
                 <i class="icon-spinner6 icon-spin icon-state-symbol"></i>
               </div>
               <div>
-                <h2 class="slabtext-container">
-                  <span class="slabtext" data-i18n="[html]connection#stopping-msg">
+                <h2 class="textfill-container">
+                  <span data-i18n="[html]connection#stopping-msg">
                     Psiphon is <span class="state-word">disconnecting</span>…
                   </span>
                 </h2>
@@ -277,8 +276,8 @@
                 </div>
               </div>
               <div>
-                <h2 class="slabtext-container">
-                  <span class="slabtext" data-i18n="[html]connection#stopped-msg">
+                <h2 class="textfill-container">
+                  <span data-i18n="[html]connection#stopped-msg">
                     Psiphon is <span class="state-word">disconnected</span>
                   </span>
                 </h2>
